# ble_smartlit

./: ADVANCED_GUIDE.md  APP_COMPARISON.md  BUG_FIX_SUMMARY.md  BUG_FIX_V2_SUMMARY.md  COMPLETE_OPTIMIZATION_README.md  ERROR_FIX_REPORT.md  FINAL_FIX_REPORT.md  INTERACTIVE_MODULE_README.md  PLOTLY_API_FIX.md  QUICK_TEST_GUIDE.md  SIDEBAR_UPDATE.md  STREAMLIT_README.md  extract_h5_data.py  fix_width_param.py  pyproject.toml  replace_width.py  requirements.txt  run_advanced.sh  run_optimized.sh  run_streamlit.sh  streamlitREADME.md  streamlit_app.py  streamlit_app_01.py  streamlit_app_02.py  streamlit_app_optimized.py  streamlit_app_simple.py  view_h5_file.py
bluetooth_optimization/: README.md  data_collection.py  feature_analysis.py  filter_strategy.py  main.py  parameter_adjustment.py  quality_evaluation.py  signal_enhancement.py  signal_processing.py  utils.py  visualization.py
bluetooth_optimization/adaptive_ble_receiver/: config.py  constants.py  main.py
bluetooth_optimization/adaptive_ble_receiver/core/: adaptive_filter.py  attention_filter_selector.py  environment_analyzer.py  parameter_adaptation.py  parameter_predictor.py  quality_assessor.py  residual_enhancement.py  rf_frontend.py
bluetooth_optimization/adaptive_ble_receiver/data/: optimization_results.h5
bluetooth_optimization/adaptive_ble_receiver/support/: data_manager.py  demo_runner.py  error_handler.py  performance_monitor.py  test_utils.py
bluetooth_optimization/adaptive_ble_receiver/utils/: ble_signal_optimizer.py  math_utils.py  (+1 more)
data/: optimization_results.h5  streamlit_optimization_results.h5
